# Gomoku

./: CMakeLists.txt  README.md  main.cpp
inc/: Ai.hpp  Capture.hpp  CommonValidationCode.hpp  DoubleThreeCheck.hpp  Gomoku.hpp  Graphics.hpp  Two.hpp  Validator.hpp  ValidatorContainer.hpp  boardState.hpp  logger.hpp  newValidator.hpp  types.hpp  utils.hpp
src/: CMakeLists.txt  Capture.cpp  CommonValidationCode.cpp  DoubleThreeCheck.cpp  Gomoku.cpp  Graphics.cpp  Two.cpp  Utils.cpp  Validator.cpp  ValidatorContainer.cpp  doubleThreeCheck.cpp  doubleThreeCheck.hpp  logger.cpp  newValidator.cpp  utils.cpp
src/AI/: Ai.cpp  boardState.cpp
test/: CMakeLists.txt  test.cpp
test/ai_tests/: CMakeLists.txt  ai_tests.cpp
test/capture_tests/: CMakeLists.txt  capture_tests.cpp
test/common_tests/: CMakeLists.txt  common_validation_tests.cpp
test/validator_tests/: CMakeLists.txt  double_three_check_tests.cpp  double_two_check_tests.cpp  validator_tests.cpp
